modified the header and styled it

--- a/index.html
+++ b/index.html
@@ -3,56 +3,124 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta
-			name="viewport"
-			content="width, initial-scale=1.0"
-		/>
-        <!-- meta -->
-        <meta name="title" content="Go South">
-        <meta name="description" content="This is a travel website by Shay">
-        <!-- favicon -->
-        <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
-        <!-- css -->
+		<meta name="viewport" content="width, initial-scale=1.0" />
+		<!-- meta -->
+		<meta name="title" content="Go South" />
+		<meta name="description" content="This is a travel website by Shay" />
+		<!-- favicon -->
+		<link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
+		<!-- css -->
 		<link rel="stylesheet" href="assets/css/style.css" />
-        <!-- pre-load images -->
+		<!-- pre-load images -->
 		<title>Go South</title>
 	</head>
 	<body>
-		<header>
-			<a href="#home" alt="logo">Logo</a>
-			<nav>
-				<ul>
-					<li>
-						<a href="#home" alt="home link">Home</a>
-					</li>
-					<li>
-						<a href="#about" alt="about link">About</a>
-					</li>
-					<li>
-						<a href="#services" alt="services link">Services</a>
-					</li>
-					<li>
-						<a href="#pricing" alt="pricing link">Pricing</a>
-					</li>
-					<li>
-						<a href="#contact" alt="contact link">Contact</a>
-					</li>
-				</ul>
+		<!-- ----------------------------- -->
+		<!-- preloader -->
+		<div class="preloader" data-preloader>
+			<div class="preloader-inner">
+				<img
+					src="assets/images/preloader.svg"
+					alt="svg icon to preload"
+					class="img"
+					width="50px"
+					height="50px"
+				/>
+			</div>
+		</div>
+		<!-- ----------------------------- -->
+		<!-- header -->
+		<header class="header " data-header>
+			<div class="container">
+				<a href="#home" alt="logo" aria-label="logo image">
+					<img
+						src="assets/images/logo.svg"
+						alt="logo"
+						class="logo"
+						width="187px"
+						height="38px"
+					/>
+				</a>
+				<!-- <----------Navbar---------->
+				<nav class="navbar active" data-navbar>
+					<div class="navbar-top">
+						<a href="#home" alt="logo" aria-label="logo image">
+							<img
+								src="assets/images/logo.svg"
+								alt="logo"
+								class="logo"
+								width="187px"
+								height="38px"
+							/>
+						</a>
 
-				<div>
-					<button alt="log-in">Log in</button>
-					<button alt="sign up">Sign Up</button>
-				</div>
-			</nav>
+						<button
+							class="nav-toggle-btn"
+							aria-label="button to close menu"
+							data-nav-toggler
+						>
+							<ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+						</button>
+					</div>
+					<ul class="navbar-list">
+						<li class="navbar-item">
+							<a href="#home" alt="home link" class="navbar-link"> Home </a>
+						</li>
+						<li class="navbar-item">
+							<a href="#about" alt="about link" class="navbar-link">About</a>
+						</li>
+						<li class="navbar-item">
+							<a href="#services" alt="services link" class="navbar-link"
+								>Services
+							</a>
+						</li>
+						<li class="navbar-item">
+							<a href="#pricing" alt="pricing link" class="navbar-link"
+								>Pricing
+							</a>
+						</li>
+						<li class="navbar-item">
+							<a href="#contact" alt="contact link" class="navbar-link"
+								>Contact
+							</a>
+						</li>
+					</ul>
+
+					<div class="header-action">
+						<a href="#" alt="log-in" class="login btn" role="button">Log in</a>
+						<a href="#" alt="sign up" class="btn btn-primary" role="button"
+							>Sign Up</a
+						>
+					</div>
+				</nav>
+
+				<button
+					class="nav-toggle-btn"
+					alt="toggle menu button"
+					aria-label="open menu"
+					data-nav-toggler
+				>
+					<ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+				</button>
+				<div class="overlay" data-overlay data-nav-toggler></div>
+			</div>
 		</header>
+
 		<main>
-            <!-- <---------- HERO ----------> 
-        </main>
+			<!-- ----------------------------- -->
+			<!-- <---------- HERO ---------->
+		</main>
 		<footer></footer>
-        <!-- custom js link -->
+		<!-- custom js link -->
 		<script src="assets/js/script.js"></script>
-        <!-- ionicon links -->
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+		<!-- ion-icon links -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+		></script>
 	</body>
 </html>
